# fileperms

./: .ackrc  .autoenv  .gitignore  .versionner.rc  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  _config.yml  index.html  index.md  params.json  requirements-dev.txt  setup.cfg  setup.py  tox.ini
fileperms/: __init__.py
test/: test_from_filemode.py  test_from_int.py  test_from_octal.py  test_from_path.py  test_getter_setter.py  test_os_chmod.py  test_pathlib.py  test_to_filemode.py  test_to_int.py  test_to_octal.py
