[metadata]
name = fileperms
version = 1.2.0
author = Marcin Sztolcman
author_email = marcin@urzenia.net
url = https://github.com/msztolcman/fileperms
description = fileperms is small library for describing file permissions
long_description = file: README.md
long_description_content_type = text/markdown
keywords = files, permissions, posix
license = MIT
# See https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Topic :: Utilities
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Source = https://github.com/msztolcman/fileperms
    Issues = https://github.com/msztolcman/fileperms/issues

[options]
packages = find:
zip_safe = True
platforms = any

[options.extras_require]
dev =
    pylint>=2.13.9
    pytest>=7.1.2
    twine>=4.0.0
    wheel>=0.37.1
    tox
    tox-asdf

[options.package_data]
* =
    README.md
    LICENSE
    VERSION


[bdist_wheel]
universal = 1
